# Django_School_Journal

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sample.env
app/: .gitignore  pyproject.toml  sample.env
app/api/: apps.py  models.py  serializers.py  urls.py  views.py
app/api/migrations/: 0001_initial.py  0002_class_student_teacher_delete_choice_delete_question.py  0003_alter_class_number.py
app/app/: settings.py  urls.py
app/journal/: models.py  permissions.py  serializers.py  urls.py  views.py
app/journal/migrations/: 0001_initial.py  0002_class_student_teacher_delete_choice_delete_question.py  0003_alter_class_number.py
app/templates/: base.html
src/: Makefile
src/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_initial.py
src/api/serializers/: __init__.py  classes_serializers.py  marks_serializers.py  students_serializers.py  teachers_serializers.py
src/api/views/: __init__.py  classes_views.py  students_views.py  teachers_views.py
src/core/: models.py  settings.py  urls.py
src/users/: apps.py  managers.py  models.py  serializers.py  views.py
src/users/migrations/: 0001_initial.py
