[project]
name = "django-journal"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "docker>=7.1.0",
    "drf-yasg>=1.21.10",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1,<8",
    "black>=24.10.0,<25",
    "pytest>=8.3.4,<9",
]
